--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,7 @@ h3 {
 }
 
 .on {
-	background-color: red;
+	background-color: #ff4d2e;
 }
 
 .unnecessary {
@@ -44,13 +44,19 @@ h3 {
 	margin-top: 50px;
 }
 
-.row p {
+.row h6, h2, p {
 	text-align: center;
-	font-size: 24px;
+}
+.link {
+	color: tomato;
+}
+.heading {
 	padding: 3%;
 }
 
-.row h6 {
+.centered {
+	padding-left: 5%;
+	padding-right: 5%;
 	text-align: center;
 }
 
